src/test/ui/parser/keyword-static-as-identifier.stderr
error: expected pattern, found keyword `static`
  --> $DIR/keyword-static-as-identifier.rs:4:9
   |
LL |     let static = "foo"; //~ error: expected pattern, found keyword `static`
   |         ^^^^^^ expected pattern

error: aborting due to previous error

